# ikafly

./: .gitignore
code/: .clang_format  .clangd  :w  CMakeLists.txt  ]  ikafly_pin.h
code/.cache/clangd/index/: bus_scan.c.4A2BCA00C29D0DF0.idx  lis3mdl.c.9724A94F327DC328.idx  lis3mdl.h.0F3519CCD1772D48.idx  lis3mdl_ex.c.EF7B7348B3398836.idx  lis3mdl_reg.c.531A1139F9FFA31B.idx  lis3mdl_reg.h.C9AD9FAA06FE7AE8.idx  uart_read.c.C234C47541F91A43.idx
code/exp/: CMakeLists.txt
code/exp/FREERTOSexp/: CMakeLists.txt
code/exp/FREERTOSexp/freertos_flash/: CMakeLists.txt  flash_rtos.cpp
code/exp/FREERTOSexp/freertos_gnss/: CMakeLists.txt  freertos_gnss.cpp
code/exp/FREERTOSexp/freertos_gnss/nmeap-0.3/: CMakeLists.txt
code/exp/FREERTOSexp/freertos_imu/: freertos_imu.cpp
code/exp/FREERTOSexp/freertos_imu_press/: CMakeLists.txt  freertos_imu_press.cpp
code/exp/FREERTOSexp/freertos_press/: CMakeLists.txt  freertos_press.cpp
code/exp/accel_log/: CMakeLists.txt  accel_log.cpp  accel_log_read.cpp
code/exp/camera/: CMakeLists.txt
code/exp/camera/picampinos/firmware/: cam.h  main.c
code/exp/camera/rp2040_ov2640/: CMakeLists.txt  image.pio  main.c  ov2640.c  shell.py
code/exp/camera_lead/: CMakeLists.txt  camera_lead.cpp
code/exp/exp_landing/: CMakeLists.txt  exp_landing.cpp  exp_landing_read.cpp  printf-stdarg.c
code/exp/flash/: CMakeLists.txt  ex_flash.cpp
code/exp/flash_nuke/: CMakeLists.txt  flash_nuke_4MB.cpp
code/exp/freertos_imu/: CMakeLists.txt  freertos_imu.cpp
code/exp/freertos_imu_press/: freertos_imu_press.cpp
code/exp/freertos_press/: freertos_press.cpp
code/exp/i2c_bus_scan/: CMakeLists.txt  bus_scan_a.c  memo.txt
code/exp/mag_sensor/: CMakeLists.txt  mag.cpp
code/exp/motor_forward/: CMakeLists.txt  motor_forward.cpp
code/exp/nichrome/: CMakeLists.txt  nichrome.c
code/exp/radio/: CMakeLists.txt  radio.cpp
code/exp/selftest/: CMakeLists.txt  selftest.cpp  selftest.uf2
code/exp/selftest2/: CMakeLists.txt  selftest.cpp
code/exp/uart_read/: CMakeLists (copy).txt  CMakeLists.txt  uart_read.c  uart_read_gps.c
code/exp/wakeup_seq/: CMakeLists.txt  wakeup_seq.c
code/exp_ikafly/: CMakeLists.txt
code/exp_ikafly/arg_ikafly/: CMakeLists.txt  arg_ikafly.cpp
code/exp_ikafly/came_ikafly/: CMakeLists.txt  cmae_ikafly.cpp
code/exp_ikafly/cmu_motor/: cmu_motor.cpp
code/exp_ikafly/commu_ikafly/: CMakeLists.txt
code/exp_ikafly/commu_ikafly/comu_comu_ikafly/: CMakeLists.txt  comu_comu.cpp  receive_ikafly.cpp
code/exp_ikafly/commu_ikafly/receive_ikafly/: CMakeLists.txt  receive_ikafly.cpp
code/exp_ikafly/commu_ikafly/send_ikafly/: CMakeLists.txt  send_ikafly.cpp
code/exp_ikafly/commu_motor/: CMakeLists.txt  commu_motor.cpp
code/exp_ikafly/distance_ikafly/: CMakeLists.txt  distance_ikafly.cpp
code/exp_ikafly/gnss_ikafly/: CMakeLists.txt  gnss_ikafly.cpp
code/exp_ikafly/imu_ikafly/: CMakeLists.txt  imu_ikafly.cpp
code/exp_ikafly/landing_ikafly/: CMakeLists.txt  landing_ikafly.cpp
code/exp_ikafly/log_ikafly/: CMakeLists.txt  log_ikafly.cpp
code/exp_ikafly/motor1_ikafly/: CMakeLists.txt  motor1_ikafly.cpp
code/exp_ikafly/motor_p/: mortor_p.cpp  motor_p.cpp
code/exp_ikafly/read_log_ikafly/: CMakeLists.txt  raed_log_ikafly.cpp  read_log_ikafly.cpp
code/exp_ikafly/rollover_ikafly/: CMakeLists.txt
code/exp_ikafly/semaphore/: CMakeLists.txt  semaphore.cpp
code/flight/: CMakeLists.txt  flight.cpp  flight2.cpp  flight3.cpp
code/flight_read/: CMakeLists.txt  flight_read.cpp
code/flightk/: CMakeLists.txt  angle.cpp  angle.h  calibration.cpp  config.h  flightk.cpp  flightread.cpp  imgcone.cpp  imgcone.h  ugps.cpp  ugps.h  ulog.cpp  ulog.h  util.h
code/freertos/: CMakeLists.txt  event.cpp  queue.cpp
code/freertos_ikafly/: CMakeLists.txt  freertos_ikafly_press.cpp
code/freertos_ikafly/freertos_ikafly_gnss/: CMakeLists.txt  freertos_ikafly_gnss.cpp
code/freertos_ikafly/freertos_ikafly_press/: CMakeLists.txt  freertos_ikafly_press.cpp
code/ikafly_test/: CMakeLists.txt
code/ikafly_test/test_detect_goal/: CMakeLists.txt  test_detect_goal.cpp
code/ikafly_test/test_landing/: CMakeLists.txt  test_landing.cpp
code/lib/: CMakeLists.txt  ikafly_pin.h
code/lib/cam/example/: CMakeLists.txt  cam_ex.cpp
code/lib/cam/src/: CMakeLists.txt  cam.cpp  cam.h  image.pio  image.pio.h  ov2640_init.h
code/lib/cam/src/jpeg-9f/: jpeglib.h
code/lib/freertos/: CMakeLists.txt
code/lib/freertos/FreeRTOS-Kernel/include/: FreeRTOS.h
code/lib/freertos/config/: FreeRTOSConfig.h
code/lib/gnss/: CMakeLists.txt
code/lib/gnss/example/: CMakeLists.txt
code/lib/gnss/nmeap-0.3/: CMakeLists.txt
code/lib/gnss/nmeap-0.3/src/: nmeap01.c
code/lib/imu/: CMakeLists.txt
code/lib/imu/example/: CMakeLists.txt  imu_euler.cpp  imu_freefall.cpp
code/lib/imu/lis3mdl/src/: CMakeLists.txt  lis3mdl.c
code/lib/imu/src/: CMakeLists.txt  imu.cpp  imu.h
code/lib/imu/src/MadgwickAHRS/: MadgwickAHRS.c
code/lib/imu/src/lsm6dso/: CMakeLists.txt
code/lib/littlefs/: CMakeLists.txt
code/lib/littlefs/example/: CMakeLists.txt  littlefs_ex.cpp
code/lib/littlefs/src/: CMakeLists.txt  littlefs.cpp  littlefs.h
code/lib/log/: CMakeLists.txt
code/lib/log/example/: CMakeLists.txt  ex_lfs.cpp  ex_log.cpp
code/lib/log/example/ex0/: CMakeLists.txt  (+1 more)
code/lib/log/src/: CMakeLists.txt  lfs_wrapper.cpp.bak  lfs_wrapper.hpp.bak  littlefs.cpp  littlefs.hpp  log.cpp  log.cpp.bak  log.hpp
code/lib/motor/: CMakeLists.txt
code/lib/motor/example/: CMakeLists.txt  ex_motor.cpp  motor_ex.c
code/lib/motor/src/: CMakeLists.txt  motor.c  motor.h  umotor.cpp  umotor.h
code/lib/press/: CMakeLists.txt
code/lib/press/example/: CMakeLists.txt  ex_press.cpp
code/lib/press/pico-spl06-001/: CMakeLists.txt
code/lib/press/src/: CMakeLists.txt  uprs.cpp  uprs.h
code/lib/rf/example/: CMakeLists.txt  ex_rf_receive.cpp  ex_rf_send.cpp
code/lib/rf/src/: CMakeLists.txt  rf.cpp  rf.h
code/lib/tjpg/example/: CMakeLists.txt
code/lib/tjpg/src/: CMakeLists.txt  tjpg.cpp  tjpg.hpp  tjpgd.c
code/lib/tjpg/util/: bmp.c  image.h  makefile  r2bmp  r2bmp.c  t-bmp.c
(+546 files in other folders)
