add_subdirectory(i2c_bus_scan)
add_subdirectory(uart_read)
add_subdirectory(wakeup_seq)
add_subdirectory(camera)
add_subdirectory(FREERTOSexp)
add_subdirectory(selftest)
add_subdirectory(nichrome)
add_subdirectory(motor_forward)
add_subdirectory(mag_sensor)
add_subdirectory(radio)
add_subdirectory(flash)
add_subdirectory(flash_nuke)
