add_compile_definitions(
    LFS_THREADSAFE
)
add_subdirectory(gnss_ikafly)
add_subdirectory(distance_ikafly)
add_subdirectory(imu_ikafly)
add_subdirectory(commu_ikafly)
add_subdirectory(landing_ikafly)
add_subdirectory(motor1_ikafly)
add_subdirectory(motor_p)
add_subdirectory(arg_ikafly)
add_subdirectory(log_ikafly)
add_subdirectory(read_log_ikafly)

